# geophotoradar

./: .env  README.md  app.code-workspace  compose-prod.yml  compose-test.yaml  docker-compose.yml
.github/workflows/: build.yaml  test.yaml
api/: .flake8  .gitignore  Dockerfile  pyproject.toml
api/app/: elastic.py  importer.py  record.py  server.py  settings.py
api/app/routers/: root.py
api/tests/: case.py  test_elastic.py  test_http.py  test_importer.py  test_test.py
api/tests/assets/: test.csv
data/: bibzug_glasplatten.csv  bibzug_glasplatten.json  bibzug_glasplatten_adapted.csv  bibzug_glasplatten_restructured.csv
frontend/: Dockerfile  nuxt.config.js  package.json  pnpm-lock.yaml  pwa-assets.config.js  tailwind.config.js
frontend/components/: Navigation.vue
frontend/composables/: useFetchPhotos.js
frontend/pages/: iiif.vue  index.vue
frontend/pages/map/: index.vue
frontend/public/: .gitignore
import/: .gitignore  Dockerfile  pyproject.toml
import/app/: config.ini  import.py
nginx/: nginx.conf
