[tool.poetry]
name = "geophotoradar"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.113.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic-settings = "^2.4.0"
elasticsearch = "^8.15.0"
python-multipart = "^0.0.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"
httpx = "^0.27.2"

[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --tb=short"
testpaths = ["tests"]

[tool.black]
line-length = 130
exclude = '''
(
  /(
      \.git
    | venv
  )/
)
'''

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = false
known_first_party = "app"
line_length = 130
lines_after_imports = 2
