[tool.poetry]
name = "import"
version = "0.1.0"
description = ""
authors = ["Lionel Walter <lionel.walter@arbim.ch>"]
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = "^8.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
